--- a/beesdoo_shift/todo.txt
+++ b/beesdoo_shift/todo.txt
@@ -1,12 +1,8 @@
-#1: is_worker in res.partner view. 
---> Cancelled. Is set by clicking on "Subscribe to shift" button. If not, the cooperateur is not set correctly (not available for shifts by e.g.). 
+    #2: [TFR] is_worker est calculé selon type de cooperateurs (via autre module gestion des cooperateurs (spécifique à chaque coop))
+      --> Voir http://www.macavrac.be/index.php/s-impliquer pour les types de part et leur association avec is_worker.
 
-#2:[TFR] is_worker est calculé selon type de cooperateurs (via autre module gestion des cooperateurs (spécifique à chaque coop))
---> Voir http://www.macavrac.be/index.php/s-impliquer pour les types de part et leur association avec is_worker.
+    #4 Group shift by day in the website
 
-#3: adapter le wizard generate template shift pour que le nom créé soit explicite (tenant compte du type, planning, day, horaires)
-[TFR] --> je vois plus le problème :/ 
+    #5 Possibility to unsubscribe to your next shift if more then x Days from today (irregular)
 
-#4 Group shift by day in the website
-
-#5 Possibility to unsubscribe to your next shift if more then x Days
+BUG #6 Fix traceback in def _get_utc_date when generating shifts 
